<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My LeakyCon London</string>
    <string name="event_name">Name:</string>
    <string name="event_description">Description:</string>
    <string name="event_location">Location:</string>
    <string name="delete_event">Delete Event</string>
    <string name="event_startdate">Start Date</string>
    <string name="event_date">Set Start Date</string>
    <string name="event_duration">Duration</string>
    <string name="event_time">Set Start Time</string>
    <string name="event_end_date">Set End Date</string>
    <string name="event_end_time">Set End Time</string>
    <string name="dont_delete_event">Don\'t Delete Event</string>
    <string name="detail_cancel">Cancel</string>
    <string name="detail_types">Event Type:</string>
    <string name="detail_backup">Backup Event:</string>
    <string name="detail_save">Save</string>
    <string name="add_event">Add Event</string>
    <string name="add_day">Add New Day</string>
    <string name="save_config">Save Config</string>
    <string name="delete_days">Delete days</string>
    <string name="delete_day">Delete Day</string>
    <string name="event_day">Event Day</string>
    <string name="config_event">Config</string>
    <string name="dialog_delete">Are you sure you wish to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="back_filter">Show back-up events</string>
    <string name="past_filter">Show past events</string>
    <string name="starts">starts at</string>
    <string name="duration">lasting</string>
    <string name="isBackUp">Is backup event</string>

    <string-array name="types_array">
        <item>Autographs</item>
        <item>Ball</item>
        <item>Discussion</item>
        <item>Food</item>
        <item>Meet-up</item>
        <item>Other</item>
        <item>Panel</item>
        <item>Show</item>
        <item>Special Event</item>
        <item>Workshop</item>
        <item>Wrock</item>
        <item>Vending</item>
    </string-array>
</resources>
