<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="15dp" >

    <EditText
            android:id="@+id/detail_name"
            android:hint="Event Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    <EditText
            android:id="@+id/detail_description"
            android:hint="Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minLines="4" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/event_date"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
                android:id="@+id/set_StartDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/event_date"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                />

    <Button
            android:id="@+id/set_StartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_time"
            android:width="145dp"
            android:onClick="showStartTimePicker"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/event_end_date"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
                android:id="@+id/set_EndDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/event_end_date"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                />

    <Button
            android:id="@+id/set_EndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_end_time"
            android:width="145dp"
            android:onClick="showEndTimePicker"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/event_location"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
            android:id="@+id/detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/detail_types"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/detail_types"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/detail_backup"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/detail_backup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    <ToggleButton
            android:id="@+id/delete_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_event"
            android:textOff="@string/dont_delete_event"
            android:textOn="@string/delete_event" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="15dp" >

        <Button
                android:id="@+id/details_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_save"
                android:width="145dp"
                android:onClick="eventSave"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>