<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

        <ListView
                android:id="@+id/eventDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
        </ListView>

        <EditText
                android:id="@+id/dayNumber"
                android:hint="Day Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:layout_marginBottom="10dp"/>

        <Button
                android:id="@+id/addDay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/add_day"
                android:onClick="addDay"
                android:layout_marginBottom="10dp"/>

        <Button
                android:id="@+id/saveConfig"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save_config"
                android:onClick="saveConfig" />
    <Button
            android:id="@+id/deleteDays"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/delete_days"
            android:onClick="deleteDays" />

    </LinearLayout>
